--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,6 @@
         alert(1);
     </script> -->
     <script src="js/script.js"></script>
-    <h3>lololoolo</h3>
+    <h3>lololoollllo</h3>
 </body>
 </html>
